fix: font size and spacing

--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -4,6 +4,7 @@ body {
 }
 
 .desk-sidebar {
+	font-size: var(--text-base);
 	.sidebar-section .sidebar-label {
 		margin-bottom: var(--margin-md);
 		margin-top: var(--margin-sm);
@@ -46,6 +47,7 @@ body {
 }
 
 .widget-group {
+	font-size: var(--text-base);
 	margin-bottom: var(--margin-2xl);
 
 	.widget-group-head {
@@ -378,7 +380,7 @@ body {
 			display: flex;
 			text-decoration: none;
 			color: var(--text-color);
-			padding: var(--padding-xs);
+			padding: var(--padding-xs) 0;
 			border-radius: var(--border-radius-md);
 			cursor: pointer;
 
